--- a/autoeducate/package.json
+++ b/autoeducate/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-client": "^1.0.1",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.1.10",
