--- a/autoeducate/package.json
+++ b/autoeducate/package.json
@@ -13,12 +13,14 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.2",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-client": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "reactstrap": "^9.1.10",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2"
