--- a/autoeducate/package.json
+++ b/autoeducate/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.2",
     "firebase": "^9.22.2",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
