--- a/autoeducate/package.json
+++ b/autoeducate/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.7.4",
     "react-client": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.13.0",
     "reactstrap": "^9.1.10",
     "sass": "^1.62.1",
